--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
+    "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
