💩 test preview image and link

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,14 +1,7 @@
 [
 	{
 		"id": 1,
-		"title": "First project"
-	},
-	{
-		"id": 2,
-		"title": "Second project"
-	},
-	{
-		"id": 3,
-		"title": "Third project"
+		"title": "Reservia",
+		"preview": ""
 	}
 ]
