--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -3,5 +3,20 @@
 		"id": 1,
 		"title": "Reservia",
 		"preview": "reservia.jpg"
+	},
+	{
+		"id": 2,
+		"title": "Ohmyfood",
+		"preview": "ohmyfood.jpg"
+	},
+	{
+		"id": 3,
+		"title": "FishEye",
+		"preview": "fisheye.jpg"
+	},
+	{
+		"id": 4,
+		"title": "Les petits plats",
+		"preview": "lespetitsplats.jpg"
 	}
 ]
