--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,11 +1,21 @@
 [
 	{
+		"id": 1,
+		"title": "Reservia",
+		"preview": [
+			"reservia/reservia_home-top.jpg",
+			"reservia/reservia_home-middle.jpg",
+			"reservia/reservia_home-bottom.jpg"
+		],
+		"link": "https://timothegonin.github.io/TimotheGonin_2_10052021/"
+	},
+	{
 		"id": 2,
 		"title": "Ohmyfood",
 		"preview": [
 			"ohmyfood/ohmyfood_home-top.jpg",
-			"ohmyfood/ohmyfood_home-bottom.jpg",
-			"ohmyfood/ohmyfood_restaurant.jpg"
+			"ohmyfood/ohmyfood_restaurant.jpg",
+			"ohmyfood/ohmyfood_home-bottom.jpg"
 		],
 		"link": "https://timothegonin.github.io/TimotheGonin_3_17062021/"
 	}
