--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,7 +1,10 @@
 [
 	{
 		"id": 1,
-		"title": "Reservia",
+		"infos": {
+			"title": "Reservia",
+			"description": "Page statique d'une entreprise proposant un outil de planification de vacances."
+		},
 		"medias": {
 			"techIcons": ["html5.svg", "css3.svg"],
 			"thumbnail": "reservia_thumbnail.jpg",
@@ -16,7 +19,10 @@
 	},
 	{
 		"id": 2,
-		"title": "Ohmyfood",
+		"infos": {
+			"title": "Ohmyfood",
+			"description": "Page dynamique d'une jeune startup sur le marché de la restauration."
+		},
 		"medias": {
 			"techIcons": ["html5.svg", "css3.svg", "sass.svg"],
 			"thumbnail": "ohmyfood_thumbnail.jpg",
