--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"bootstrap": "^5.3.2",
+		"core-js": "^3.33.3",
 		"current-year-copyright-react": "^0.3.0",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.0",
@@ -40,5 +41,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "7.21.0",
+		"gh-pages": "^6.1.0"
 	}
 }
