--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+	"homepage": "https://timothegonin/github.io/portfolio",
 	"name": "portfolio",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
@@ -22,7 +23,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "yarn run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
