--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
 		"react-particles": "^2.12.2",
+		"react-pdf": "^7.7.0",
 		"react-scripts": "5.0.1",
 		"styled-components": "^6.1.0",
 		"tsparticles": "^2.12.0",
